change cloud name

--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,18 +1,18 @@
 ---
 development:
-  cloud_name: georgescloudinary
+  cloud_name: ggscloudinary
   api_key: <%= ENV['CLOUDINARY_API_KEY'] =>
   api_secret: <%= ENV['CLOUNDINARY_API_SECRET'] %>
   enhance_image_tag: true
   static_file_support: false
 production:
-  cloud_name: georgescloudinary
+  cloud_name: ggscloudinary
   api_key: <%= ENV['CLOUDINARY_API_KEY'] =>
   api_secret: <%= ENV['CLOUNDINARY_API_SECRET'] %>
   enhance_image_tag: true
   static_file_support: true
 test:
-  cloud_name: georgescloudinary
+  cloud_name: ggscloudinary
   api_key: <%= ENV['CLOUDINARY_API_KEY'] =>
   api_secret: <%= ENV['CLOUNDINARY_API_SECRET'] %>
   enhance_image_tag: true
